Updated Gradle Build Files to Remove Experimental Feature Warning

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,13 @@ android {
     }
 }
 
+// Allows use of Experimental Kotlin features, such as, Kotlin Contracts
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        freeCompilerArgs = ['-XXLanguage:+InlineClasses']
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
