--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,8 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.10"
 
     implementation project(':common-jvm')
 
