Updated to new Kotlin Multiplatform Structure and dropped inline class support since that was not working with the new kotlin multiplatform structure

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,13 @@
+pluginManagement {
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == "kotlin-multiplatform") {
+                useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${requested.version}")
+            }
+        }
+    }
+}
+
 rootProject.name = 'inline-pixel'
-include ':common'
-include ':common-jvm'
-include ':common-js'
-include ':android'
+
+enableFeaturePreview('GRADLE_METADATA')
