--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.30'
     repositories {
         google()
         jcenter()
@@ -67,8 +67,8 @@ android {
 kotlin {
     targets {
         // iOS
-        final def iOSTarget = System.getenv('SDK_NAME')?.startsWith("iphoneos")             \
-                                          ? presets.iosArm64 : presets.iosX64
+        final def iOSTarget = System.getenv('SDK_NAME')?.startsWith("iphoneos")                 \
+                                              ? presets.iosArm64 : presets.iosX64
 
         fromPreset(iOSTarget, 'ios') {
             binaries {
@@ -132,3 +132,13 @@ task packForXCode(type: Sync) {
     }
 }
 tasks.build.dependsOn packForXCode
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.chrynan'
+            artifactId = 'pixel'
+            version = rootProject.libraryVersion
+        }
+    }
+}
