--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,7 @@ buildscript {
     }
 }
 
-plugins {
-    id 'kotlin-multiplatform' version '1.3.21'
-}
-
+apply plugin: 'kotlin-multiplatform'
 apply plugin: 'maven-publish'
 apply plugin: 'com.android.library'
 
@@ -78,6 +75,9 @@ kotlin {
 
         // Android
         fromPreset(presets.android, 'android')
+    }
+    android {
+        publishLibraryVariants("release", "debug")
     }
     sourceSets {
         commonMain {
