--- a/build.gradle
+++ b/build.gradle
@@ -1,151 +1,96 @@
+import org.gradle.api.publish.maven.internal.artifact.FileBasedMavenArtifact
+
+ext {
+    bintrayRepo = 'chrynan'
+    libraryGroup = 'com.chrynan.time'
+    libraryOwner = 'chrynan'
+    libraryRepo = 'pixel'
+    libraryVersion = '0.3.0'
+    libraryVersionCode = 1
+    libraryVersionDescription = 'First Major Release'
+    githubURL = 'https://github.com/chRyNaN/pixel.git'
+}
+
+group rootProject.libraryGroup
+version rootProject.libraryVersion
+
 buildscript {
-    ext.kotlin_version = '1.3.30'
+    ext.kotlin_version = '1.3.71'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
+        classpath 'com.android.tools.build:gradle:3.6.2'
+        classpath 'digital.wup:android-maven-publish:3.6.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
     }
 }
 
-apply plugin: 'kotlin-multiplatform'
-apply plugin: 'maven-publish'
-apply plugin: 'com.android.library'
-
-repositories {
-    jcenter()
-    mavenCentral()
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-    google()
-}
-
-ext {
-    libraryVersion = '0.3.0'
-    libraryVersionCode = 1
-}
-
-group 'com.chrynan'
-version rootProject.libraryVersion
-
-android {
-    compileSdkVersion 28
-    defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 28
-        versionCode rootProject.libraryVersionCode
-        versionName rootProject.libraryVersion
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    sourceSets {
-        main {
-            manifest.srcFile 'src/androidMain/AndroidManifest.xml'
-            java.srcDirs = ['src/androidMain/kotlin']
-            res.srcDirs = ['src/androidMain/res']
-        }
-        test {
-            java.srcDirs = ['src/androidTest/kotlin']
-            res.srcDirs = ['src/androidTest/res']
-        }
+allprojects {
+    repositories {
+        mavenCentral()
+        jcenter()
+        google()
     }
 }
 
-kotlin {
-    targets {
-        // iOS
-        final def iOSTarget = System.getenv('SDK_NAME')?.startsWith("iphoneos")                   \
-                                                ? presets.iosArm64 : presets.iosX64
+subprojects {
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    apply plugin: 'com.jfrog.bintray'
+    apply plugin: 'org.jetbrains.dokka'
 
-        fromPreset(iOSTarget, 'ios') {
-            binaries {
-                framework('pixel')
-            }
+    dokka {
+        outputFormat = 'gfm'
+        outputDirectory = "../docs"
+
+        configuration {
+            includeNonPublic = false
+            skipEmptyPackages = true
+            skipDeprecated = true
+            reportUndocumented = true
+            jdkVersion = 8
+            targets = ["JVM", "COMMON"]
         }
-
-        // Android
-        fromPreset(presets.android, 'android')
-
-        jvm()
     }
-    android {
-        publishLibraryVariants("release", "debug")
-    }
-    sourceSets {
-        commonMain {
-            dependencies {
-                implementation 'org.jetbrains.kotlin:kotlin-stdlib-common'
-            }
-        }
-        commonTest {
-            dependencies {
-                implementation 'org.jetbrains.kotlin:kotlin-test-common'
-                implementation 'org.jetbrains.kotlin:kotlin-test-annotations-common'
-            }
-        }
-        androidMain {
-            dependencies {
-                implementation 'org.jetbrains.kotlin:kotlin-stdlib'
-            }
-        }
-        androidTest {
-            dependencies {
-                implementation 'org.jetbrains.kotlin:kotlin-test'
-                implementation 'org.jetbrains.kotlin:kotlin-test-junit'
-            }
-        }
-        iosMain {
-        }
-        iosTest {
-        }
-        jvmMain {
-            dependencies {
-                implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+
+    bintray {
+        user = project.findProperty("BINTRAY_USER") ?: System.getenv('BINTRAY_USER')
+        key = project.findProperty("BINTRAY_KEY") ?: System.getenv('BINTRAY_KEY')
+        pkg {
+            repo = rootProject.bintrayRepo
+            name = rootProject.libraryRepo
+            licenses = ['Apache-2.0']
+            vcsUrl = rootProject.githubURL
+            version {
+                name = rootProject.libraryVersion
+                desc = rootProject.libraryVersionDescription
+                released = new Date()
+                vcsTag = rootProject.libraryVersion
             }
         }
     }
-}
 
-configurations {
-    compileClasspath
-}
+    bintrayUpload.doFirst {
+        publications = publishing.publications.collect {
+            File moduleFile = project.buildDir.toPath()
+                    .resolve("publications/${it.name}/module.json").toFile()
 
-task packForXCode(type: Sync) {
-    final File frameworkDir = new File(buildDir, "xcode-frameworks")
-    final String mode = project.findProperty("XCODE_CONFIGURATION")?.toUpperCase() ?: 'DEBUG'
-    final def framework = kotlin.targets.ios.binaries.getFramework("pixel", mode)
+            if (moduleFile.exists()) {
+                it.artifact(new FileBasedMavenArtifact(moduleFile) {
+                    @Override
+                    protected String getDefaultExtension() {
+                        return "module"
+                    }
+                })
+            }
 
-    inputs.property "mode", mode
-    dependsOn framework.linkTask
-
-    from { framework.outputFile.parentFile }
-    into frameworkDir
-
-    doLast {
-        new File(frameworkDir, 'gradlew').with {
-            text = "#!/bin/bash\nexport 'JAVA_HOME=${System.getProperty("java.home")}'\ncd '${rootProject.rootDir}'\n./gradlew \$@\n"
-            setExecutable(true)
+            it.name
         }
     }
-}
-tasks.build.dependsOn packForXCode
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'com.chrynan'
-            artifactId = 'pixel'
-            version = rootProject.libraryVersion
-        }
-    }
+    bintrayUpload.dependsOn publishToMavenLocal
 }
