--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,6 @@
-pluginManagement {
-    resolutionStrategy {
-        eachPlugin {
-            if (requested.id.id == "kotlin-multiplatform") {
-                useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${requested.version}")
-            }
-        }
-    }
-}
-
 rootProject.name = 'pixel'
+
+include ":pixel-core"
+include ":pixel-android"
 
 enableFeaturePreview('GRADLE_METADATA')
